# Vulkan-Journey

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.bat  shell.nix
examples/: CMakeLists.txt  shared.slang
examples/1_triangle/: main.cpp
examples/1_triangle/shaders/: shader.slang
examples/2_compute/: main.cpp
examples/2_compute/shaders/: add.slang  matmul.slang  mul.slang  trace.slang
examples/3_textures/: main.cpp
examples/3_textures/shaders/: shader.slang
examples/4_indirect_triangles/: main.cpp
examples/4_indirect_triangles/shaders/: shader.slang
examples/5_3D/: main.cpp  shared.cpp  shared.hpp
examples/5_3D/shaders/: shader.slang
shaders/: frag.hlsl  shader.frag  shader.vert  test.slang  vert.hlsl
shaders/spv/: test.vert.spv
src/: gpu.cpp  gpu.hpp  macro_utils.hpp  main.cpp  vma.cpp  vulkan_error.inl
src/gpu/: gpu.cpp  gpu.hpp  priority_queue.hpp  vk_convert.cpp  vulkan_error.inl
